--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
   <head>
     <title>Selects</title>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/styles.css" />
+    <script type="module" src="/src/index.ts"></script>
   </head>
 
   <body>
@@ -73,7 +76,5 @@
         </select>
       </photo-select>
     </div>
-
-    <script src="src/index.ts"></script>
   </body>
 </html>
