--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>Selects</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/styles.css" />
-    <script type="module" src="/src/index.ts"></script>
+    <link rel="stylesheet" href="/super-upgrade/src/style.css" />
+    <script type="module" src="/super-upgrade/src/index.ts"></script>
   </head>
 
   <body>
