--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <option value="watermelon">Watermelon</option>
       </select>
 
-      <custom-select label="Choose your favorite pet">
+      <select-upgrade label="Choose your favorite pet">
         <select name="favorite-pet">
           <option value=""></option>
           <option value="dog" selected>Dog</option>
@@ -32,7 +32,7 @@
           <option value="bird">Bird</option>
           <option value="lizard">Lizard</option>
         </select>
-      </custom-select>
+      </select-upgrade>
 
       <color-select>
         <select name="color">
